project z-index fix and modal update

--- a/src/styles/project-template-global.css
+++ b/src/styles/project-template-global.css
@@ -80,7 +80,6 @@ ul {
 }
 
 body {
-  position: relative;
   overflow-x: hidden;
   background-color: var(--primary-color);
   font-size: var(--fs-4);
@@ -273,6 +272,13 @@ a {
 }
 
 /* ---------------- section two------------------------------ */
+.project-1st-img-wrapper {
+  padding-inline: 2.5rem;
+  margin-inline: auto;
+  max-width: 85rem;
+  padding-block: 2.5rem;
+}
+
 .project-1st-img {
   width: 100%;
   height: 100%;
@@ -282,11 +288,16 @@ a {
   display: block;
 }
 
+@media (max-width: 768px) {
+  .project-1st-img-wrapper {
+    padding-block: 2rem 0;
+  }
+}
+
 /* ---------------- section three------------------------------ */
 .third-section {
   position: relative;
   overflow-x: clip;
-  z-index: -1;
 }
 
 .project-template-third-sec-container {
@@ -313,7 +324,7 @@ a {
 @media (max-width: 768px) {
   .project-template-third-sec-container {
     flex-direction: column;
-    padding-block: 6em 0em;
+    padding-block: 5em 0em;
   }
 
   .project-template-third-sec-col-lft {
